# arduino-cmake

./: CMakeLists.txt
cmake/: ArduinoSimToolchain.cmake  ArduinoToolchain.cmake
cmake/Platform/: Arduino.cmake
example/: CMakeLists.txt
example/Blink/: Blink.ino
libraries/Desktop/include/: Arduino.h
libraries/Desktop/include/avr/: io.h
libraries/Desktop/support/: Arduino.cpp  FastSerial.cpp  main.cpp  sitl.cpp
